--- a/assets/css/style1.css
+++ b/assets/css/style1.css
@@ -1,6 +1,12 @@
 @import url('https://fonts.googleapis.com/css?family=Lato|Supermercado+One');
+body
+{
+    font-family: Lato;
+    background-image: url(../images/map-bg.jpg);
+    font-size: 18px;
+}
 
-/* 
+/*
     Add a CSS ruleset to accomplish the following:
     - Use the 'Lato' font family at 18px throughout the body of the document
     - cover the of the document background with the "map-bg.jpg" image in the images directory. 
@@ -8,8 +14,18 @@
 
 
 nav {font-family: sans-serif;font-size: 10px;}
-#main {width: 900px; margin: 10px auto;}
+#main {
+    width: 900px; 
+    margin: 10px auto;
+     
+}
 
+h1 
+{
+ font-family: Supermercado One ;
+ font-size: 45px;
+ color: #5d4037;
+}
 /* 
     Add a CSS ruleset targeting the restaurant name to accomplish the following:
         - Use the 'Supermercado One' font 
@@ -25,10 +41,16 @@ nav {font-family: sans-serif;font-size: 10px;}
 #menu {
     columns: 400px 2;
     column-gap: 100px;
+    column-rule: 2px dashed rosybrown;
 }
 
 section {padding-bottom: 50px;}
-h2 {margin: 0;}
+h2 {
+    margin: 0;
+    color: #6d4c41;
+    font-variant: small-caps;
+
+}
 
 /* 
     Add a CSS ruleset targeting the headings of the menu (e.g. "Starters") to accomplish the following:
@@ -36,7 +58,11 @@ h2 {margin: 0;}
         - set the font color to #6d4c41
 */
 
-
+dt
+{
+    font-size: 20px;
+    font-weight: bold;
+}
 /* 
     Add a CSS ruleset targeting the name of each menu item to accomplish the following:
         - Set the font size to 20px
@@ -55,9 +81,15 @@ dd {margin: 0 0 12px 0; display: flex;}
 .price {
     order: 2;
     padding-left: 10px;
+    font-size: large;
+    color: firebrick;
 }
 
-address {padding: 10px;}
+address 
+{
+    padding: 10px;
+    border: 2px dashed rosybrown;
+}
 
 /* 
     Add a CSS ruleset targeting the footer to accomplish the following:
