--- a/assets/css/style2.css
+++ b/assets/css/style2.css
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css?family=Bungee+Inline|Oswald');
-
+body
+{
+    font-family: Oswald;
+    font-size: 14px;
+}
 /* 
     Add a CSS ruleset to accomplish the following:
     - Use the 'Oswald' font family at 14px throughout the body of the document.
@@ -8,7 +12,12 @@
 
 nav {font-family: sans-serif; font-size: 10px;}
 #main {width: 900px; margin: 10px auto;}
-
+h1
+{
+    font-family: Bungee Inline;
+    font-size: 46px;
+    font-weight: lighter;
+}
 /* 
     Add a CSS ruleset targeting the restaurant name to accomplish the following:
         - Use the 'Bungee Inline' font 
@@ -20,7 +29,12 @@ nav {font-family: sans-serif; font-size: 10px;}
 #menu {columns: 420px 2; column-gap: 60px;}
 section {margin-bottom: 20px; padding: 10px;}
 
-h2 {margin-top: 0;}
+h2 
+{
+    font-variant: unset;
+    margin-top: 0%;
+    text-transform: uppercase;
+}
 
 /* 
     Add a CSS ruleset targeting targeting the headings of the menu (e.g. "Starters") to accomplish the following:
@@ -33,28 +47,44 @@ h2 {margin-top: 0;}
         - Make the name of each menu item appear in bold 
         - set the font size to 16px
 */
-dt {
+dt 
+{
+    font-weight: bold;
+    font-size: 16px;
     display: inline;
 }
 
-/* 
+dt::after
+{
+    content: ",";
+}    
+    
+    /* 
     Add a CSS ruleset to accomplish the following:
     - Make a comma appear after the name of each menu item
 */
 
 
 
-dd {display: inline; margin: 0;}
-dd::after {content: " "; display: block; clear: both; margin-bottom: 15px;}
+dd
+{ display: inline; margin: 0;}
+dd::after { content: " ";display: block; clear: both; margin-bottom: 15px;}
 
 .price {float: right; padding: 0 0 35px 20px;}
 
+footer
+{
+    text-align: right;
+}
 /* 
     Add a CSS ruleset targeting the footer to accomplish the following:
     - right align the text in the footer
 */
 
-
+#starters, #desserts
+{
+    border: 2px solid black;
+}
 
 /* 
     Add a CSS ruleset targeting the starters and desserts sections to accomplish the following:
